<resources>
    <string name="app_name">Hattrick Scoreboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_informations">Informations</string>
    <string name="label_loading">Loading…</string>
    <string name="label_connexion_refused">Connection refused…</string>
    <string name="label_no_connexion">Aucune connexion…</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_close">Close</string>
    <string name="label_unavailable">Unavailable</string>
    <string name="label_summary">Summary</string>
    <string name="label_total">Total</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_first_loading">Recovering information, this may be long…</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_press_again_exit">Press once again to exit</string>
    <string name="chpp_text_hattrick">Hattrick Scoreboard is only available for players Hattrick.</string>
    <string name="chpp_text_allow">You must allow Hattrick Scoreboard to use your team. Click here to view permissions.</string>
    <string name="chpp_textfield_username">Hattrick username</string>
    <string name="chpp_textfield_password">Hattrick password</string>
    <string name="chpp_label_authentication_progress">Authorisation in progress…</string>
    <string name="chpp_label_authentication_refused">Authorisation refused…</string>
    <string name="chpp_label_authentication_accepted">Authorisation accepted…</string>
    <string name="chpp_title_permission">Permissions CHPP Hattrick</string>
    <string name="chpp_permission_edito_1">Your username and password are used only to confirm the connection. They are never stored or used.</string>
    <string name="chpp_permission_edito_2">Hattrick Scoreboard want to connect to your Hattrick account with the following permissions:</string>
    <string name="chpp_permission_title_1">• Read access</string>
    <string name="chpp_permission_title_2">• Manage challenges (coming soon)</string>
    <string name="chpp_permission_title_3">• Manage young players (coming soon)</string>
    <string name="chpp_permission_title_4">• Place a bid (coming soon)</string>
    <string name="chpp_permission_title_5">• Sending match orders (coming soon)</string>
    <string name="chpp_permission_title_6">• Define the training (coming soon)</string>
    <string name="menu_title_team">Team</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_arena">Arena</string>
    <string name="menu_staff">Staff</string>
    <string name="menu_fans">Supporters</string>
    <string name="menu_transfers">Transfers</string>
    <string name="menu_finances">Finances</string>
    <string name="menu_community">Communnity</string>
    <string name="menu_title_senior">Senior team</string>
    <string name="menu_players">Players</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_series">Series</string>
    <string name="menu_training">Training</string>
    <string name="menu_title_youth">Youth team</string>
    <string name="menu_title_national">National teams</string>
    <string name="menu_national_senior">National team</string>
    <string name="menu_national_youth">National youth team</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="club_title_home">Home</string>
    <string name="club_title_success">Success</string>
    <string name="club_title_match_kit">Match kit</string>
    <string name="club_label_position">%1$d° in %2$s</string>
    <string name="club_label_stillcup">Still in %1$s</string>
    <string name="club_label_place">Place:</string>
    <string name="club_label_fanclub">Fan club:</string>
    <string name="club_value_fanclub">%1$s supporters</string>
    <string name="club_label_arena">Arena:</string>
    <string name="club_label_rank">Ranked:</string>
    <string name="club_value_rank">%1$s</string>
    <string name="club_label_home">Home</string>
    <string name="club_label_away">Away</string>
    <string name="club_label_undefeated">%1$d  undefeated competitive games</string>
    <string name="club_label_victories">%1$d  undefeated competitive games, %1$d wins in a row</string>
    <string name="arena_seats">%1$s seats</string>
    <string name="arena_label_owner">Belongs to</string>
    <string name="arena_label_lastbuild">Last improvement</string>
    <string name="arena_label_basic">Basic seating</string>
    <string name="arena_label_terraces">Terraces</string>
    <string name="arena_label_roof">Seats under roof</string>
    <string name="arena_label_VIP">Seats in VIP boxes</string>
    <string name="arena_label_total">Total capacity</string>
    <string name="staff_label_level">Level %1$d</string>
    <string name="staff_label_cost">Cost</string>
    <string name="finances_title_current">This week</string>
    <string name="finances_title_lastweek">Last week</string>
    <string name="finances_title_income">Income</string>
    <string name="finances_title_costs">Costs</string>
    <string name="finances_label_cash">Cash funds</string>
    <string name="finances_label_expectedcash">Expected income/loss</string>
    <string name="finances_label_sponsorspopularity">Sponsors</string>
    <string name="finances_label_supporterspopularity">Supporters</string>
    <string name="finances_label_incomespectators">Revenue</string>
    <string name="finances_label_incomesponsors">Sponsors</string>
    <string name="finances_label_incomefinancial">Financial</string>
    <string name="finances_label_incomesoldplayers">Player sales</string>
    <string name="finances_label_incomesoldplayerscommission">Commissions</string>
    <string name="finances_label_incometemporary">Others</string>
    <string name="finances_label_incomesum">Total revenue</string>
    <string name="finances_label_costs_arena">Arena</string>
    <string name="finances_label_costs_players">Wages</string>
    <string name="finances_label_costs_financial">Interest</string>
    <string name="finances_label_costs_staff">Staff</string>
    <string name="finances_label_costs_boughtplayers">New signings</string>
    <string name="finances_label_costs_arenabuilding">Building</string>
    <string name="finances_label_costs_temporary">Other</string>
    <string name="finances_label_costs_youth">Youth scouting</string>
    <string name="finances_label_costs_sum">Total expenses</string>
    <string name="community_title_bookmarks">Bookmarks</string>
    <string name="players_label_age">%1$s year and %2$s days, TSI = %3$s</string>
    <string name="players_label_form">In %1$s form</string>
    <string name="players_label_stats_team_total">Total (without trainer)</string>
    <string name="players_label_stats_TSI">TSI</string>
    <string name="player_label_stats_costs">Wages</string>
    <string name="player_label_stats_nationalities">Nationalities</string>
    <string name="player_label_stats_injuries">Injuries</string>
    <string name="player_label_stats_specialities">Spécialities</string>
    <string name="player_label_stats_yellow_cards">Warning</string>
    <string name="player_label_stats_red_cards">Red cards</string>
    <string name="player_label_stats_team_average">Team average (without trainer)</string>
    <string name="player_label_stats_age">Age</string>
    <string name="player_label_stats_form">Form</string>
    <string name="player_label_stats_endurance">Endurance</string>
    <string name="player_label_stats_experience">Experience</string>
    <string name="player_description_form">In %1$s form, %2$s stamina.</string>
    <string name="player_description_agreeability_aggressiveness_honesty">A %1$s who is %2$s and %3$s.</string>
    <string name="player_description_experience_leadership">Has %1$s experience and %2$s leadership.</string>
    <string name="player_description_loyalty">Has %1$s loyalty.</string>
    <string name="player_description_owner">Owner :</string>
    <string name="player_description_salaire">Wage :</string>
    <string name="player_description_speciality">Speciality :</string>
    <string name="player_label_caracteristics">Current skills</string>
    <string name="player_label_statistics">Statistics</string>
    <string name="player_label_overview">Overview</string>
    <string name="player_label_keeper">Keeper :</string>
    <string name="player_label_defenser">Defending :</string>
    <string name="player_label_playmaker">Playmaking :</string>
    <string name="player_label_winger">Winger :</string>
    <string name="player_label_passing">Passing :</string>
    <string name="player_label_scorer">Scoring :</string>
    <string name="player_label_setpieces">Set pieces :</string>
    <string name="player_title_career">Career</string>
    <string name="player_title_international_career">International Career</string>
    <string name="player_label_last_game">Last match</string>
    <string name="player_label_stats_career_goals">Career goals :</string>
    <string name="player_label_stats_career_hattrick">Hattricks  :</string>
    <string name="player_label_stats_league_goals">Season series goals :</string>
    <string name="player_label_stats_cup_goals">Season cup goals :</string>
    <string name="player_label_stats_friendlies_goals">Season friendly goals :</string>
    <string name="player_label_stats_caps_national">International caps :</string>
    <string name="player_label_stats_caps_national_u20">U-20 caps:</string>
    <string name="players_statistics">Statistics</string>
    <string name="players_statistics_team">Team</string>
    <string name="players_statistics_players">Players</string>
    <string name="players_statistics_tsi">TSI: %1$s</string>
    <string name="players_statistics_tsi_average">average: %1$s</string>
    <string name="players_statistics_tsi_max">max.: %1$s (%2$s)</string>
    <string name="players_statistics_salary">Salary: %1$s</string>
    <string name="players_statistics_salary_average">average: %1$s</string>
    <string name="players_statistics_salary_max">max.: %1$s (%2$s)</string>
    <string name="players_statistics_age">Age:</string>
    <string name="players_statistics_age_average">moyen: %1$s years, %2$s days</string>
    <string name="players_statistics_stamina">Stamina: %1$s</string>
    <string name="players_statistics_endurance">Endurance: %1$s</string>
    <string name="players_statistics_experience">Experience: %1$s</string>
    <string name="players_statistics_nationalities">Nationality: %1$s</string>
    <string name="players_statistics_injuries">Injured: %1$s</string>
    <string name="players_statistics_yellow_cards">Yellow cards: %1$s</string>
    <string name="players_statistics_red_cards">Red cards: %1$s</string>
    <string name="matches_series_week">Round %1$d</string>
    <string name="matches_week">Week %1$d</string>
    <string name="matches_overflow_menu_add_live">Add to live</string>
    <string name="matches_overflow_menu_remove_live">Remove from live</string>
    <string name="series_title_classment">Classment</string>
    <string name="series_team">TEAM</string>
    <string name="series_played">P</string>
    <string name="series_goals">Goals</string>
    <string name="series_differences">Diff.</string>
    <string name="series_points">Pts</string>
    <string name="series_title_date">Rounds</string>
    <string name="series_round_date">Round %1$d - %2$s</string>
    <string name="training_title_team">Team</string>
    <string name="training_label_team_spririt">Team spirit</string>
    <string name="match_title_highlight">HIGHLIGHT</string>
    <string name="match_title_date">Date</string>
    <string name="match_title_arena">Arena</string>
    <string name="match_title_referee">Referee</string>
    <string name="match_title_spectators">Spectators</string>
</resources>