<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btn_listview_normal"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_header_primary_bg">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/series_team"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/series_played"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/series_goals"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/series_differences"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/series_points"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_size" />

        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/lvTeamSeries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TableLayout1"
        android:divider="@null">

    </ListView>

</RelativeLayout>