<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            style="@style/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTeamName"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_header_primary_bg"
                    android:padding="5dp"
                    android:text="INFORMATIONS" />

                <ImageView
                    android:id="@+id/ivWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/tvTeamID"
                    android:src="@drawable/ic_weather_overcast" />

                <ImageView
                    android:id="@+id/ivMatchType"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/ivWeather"
                    android:src="@drawable/ic_cup_ruby" />

                <TextView
                    android:id="@+id/tvMatchID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/ivWeather"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/ivMatchType"
                    android:gravity="center|center_vertical"
                    android:text="(123456)"
                    android:textColor="#CCC"
                    android:textSize="10sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:id="@+id/LinearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/match_title_date"
                            android:textColor="@color/text_gray" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_unavailable" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/match_title_referee"
                            android:textColor="@color/text_gray" />

                        <TextView
                            android:id="@+id/tvReferee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_unavailable" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/match_title_arena"
                            android:textColor="@color/text_gray" />

                        <TextView
                            android:id="@+id/tvArena"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_unavailable" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/match_title_spectators"
                            android:textColor="@color/text_gray" />

                        <TextView
                            android:id="@+id/tvSpectators"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_unavailable" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="1"
                android:background="@drawable/ic_header_primary_bg"
                android:padding="5dp"
                android:text="@string/match_title_highlight" />

            <LinearLayout
                android:id="@+id/llHighlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>